# hybrid-rag-pipeline

./: .gitignore  README.md  pyproject.toml  rag_config.example.json  rag_pipeline.py  requirements.txt  scrape_discourses.py
examples/: process_books.py  scrape_discourses.py
tests/: test_core.py  test_phase1.py  test_phase2.py
