[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hybrid-rag-pipeline"
version = "0.1.0"
description = "Hybrid RAG pipeline (vector + BM25) for Q&A over document corpora"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "chromadb>=0.5.0,<1.0",
    "sentence-transformers>=3.0.0,<4.0",
    "rank-bm25>=0.2.2,<0.3",
    "tiktoken>=0.7.0,<1.0",
    "anthropic>=0.40.0,<1.0",
    "numpy>=1.26.0,<3.0",
]

[project.optional-dependencies]
ingest = [
    "requests>=2.31.0,<3.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "PyMuPDF>=1.24.0,<2.0",
]

[project.scripts]
rag-search = "rag_pipeline:main"
